--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^17.0.1",
     "react-loading-skeleton": "^2.1.1",
     "serverless-mysql": "^1.5.4",
-    "swr": "^0.3.9"
+    "swr": "^0.3.9",
+    "use-auth0-hooks": "^0.7.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
