--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "migrate": "node scripts/migrate-db.js"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.2.0",
     "bad-words": "^3.0.4",
     "clsx": "^1.1.1",
     "dotenv": "^8.2.0",
@@ -16,8 +17,7 @@
     "react-dom": "^17.0.1",
     "react-loading-skeleton": "^2.1.1",
     "serverless-mysql": "^1.5.4",
-    "swr": "^0.3.9",
-    "use-auth0-hooks": "^0.7.0"
+    "swr": "^0.3.9"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
