--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "with-mysql",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "migrate": "node scripts/migrate-db.js"
