--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.2.0",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.11.0",
     "axios": "^0.21.0",
     "bad-words": "^3.0.4",
     "clsx": "^1.1.1",
@@ -18,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-loading-skeleton": "^2.1.1",
     "serverless-mysql": "^1.5.4",
+    "stripe": "^8.126.0",
     "swr": "^0.3.9"
   },
   "devDependencies": {
