--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@auth0/auth0-react": "^1.2.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
+    "aws-sdk": "^2.803.0",
     "axios": "^0.21.0",
     "bad-words": "^3.0.4",
     "clsx": "^1.1.1",
