--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "with-mysql",
-  "version": "1.0.0",
+  "name": "next-mysql-boilerplate",
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
@@ -11,26 +11,28 @@
     "@auth0/auth0-react": "^1.2.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
+    "access-data-parser": "^1.5.0",
     "aws-sdk": "^2.803.0",
     "axios": "^0.21.0",
     "bad-words": "^3.0.4",
     "clsx": "^1.1.1",
     "dotenv": "^8.2.0",
-    "next": "latest",
+    "next": "^10.0.3",
+    "postcss": "^8.1.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-loading-skeleton": "^2.1.1",
     "serverless-mysql": "^1.5.4",
-    "stripe": "^8.126.0",
+    "stripe": "^8.127.0",
     "swr": "^0.3.9"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
-    "@types/react": "^16.9.55",
-    "postcss-flexbugs-fixes": "4.2.1",
+    "@types/react": "latest",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.7.4",
-    "typescript": "^4.0.5"
+    "tailwindcss": "^2.0.1",
+    "typescript": "^4.1.2"
   },
   "license": "MIT"
 }
