--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.1.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-loading-skeleton": "^2.1.1",
     "serverless-mysql": "^1.5.4",
     "stripe": "^8.127.0",
