--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.2.0",
+    "@headlessui/react": "^0.2.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
+    "@tailwindcss/forms": "^0.2.1",
     "access-data-parser": "^1.5.0",
     "aws-sdk": "^2.803.0",
     "axios": "^0.21.0",
