--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-loading-skeleton": "^2.1.1",
+    "react-modal": "^3.12.1",
     "serverless-mysql": "^1.5.4",
     "stripe": "^8.127.0",
     "swr": "^0.3.9"
